--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.mobility_scv_maven/com.example.mobility_scv_maven.Controller
+                            <mainClass>com.example.mobility_scv_maven/com.example.mobility_scv_maven.MainController
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
